data/collection/fixes/descriptions/java/JDK-8011028
----------messages:(1/1034)----------
command: com.sun.jck.lib.BuildCompilerAPICmd -MTASK_ -groupSize 500 -testTimeout
 600 -MCMD_ /set/java/re/jdk/8/promoted/ea/b82/binaries/solaris-sparc/bin/java -Xms32m -Xmx512m -classpath /net/spb-m4000/export/users/ygaevsky/ws/jck8/_build/shared/classes:/net/spb-m4000/export/users/ygaevsky/ws/jck8/_build/shared/lib/tckbtools.jar:/net/spb-m4000/export/users/ygaevsky/ws/jck8/_build/shared/suite/JCK-runtime-8/lib/jtjck.jar:/net/spb-m4000/export/users/ygaevsky/ws/jck8/_build/shared/lib/javatest.jar:/net/spb-m4000/export/users/ygaevsky/ws/jck8/_build/shared/suite/JCK-runtime-8/classes -MTEST_ com.sun.jck.lib.SharedCompilerAPICmd -classpath /net/spb-m4000/export/users/ygaevsky/ws/jck8/_build/shared/lib/javatest.jar:/net/spb-m4000/export/users/ygaevsky/ws/jck8/_build/shared/suite/JCK-runtime-8/classes -d /net/spb-m4000/export/users/ygaevsky/ws/jck8/_build/shared/suite/JCK-runtime-8/classes -optStart -optEnd tests/lang/INFR/infr001/infr00101md/infr00101md.java -MTESTSOURCE_ tests/lang/INFR/infr001/infr00101md/infr00101md.java
----------out1:(0/0)----------
----------out2:(26/1850)----------
MultiJVM group agent ID: 36
tests/lang/INFR/infr001/infr00101md/infr00101md.java:37: error: method m in class javasoft.sqe.tests.lang.infr001.infr00101md.infr00101md cannot be applied to g
iven types;
        return m(ClassGen_1_1::new, new Class_1_1()) == 1;
               ^
  required: javasoft.sqe.tests.lang.infr001.infr00101md.infr00101md.Iface<? extends javasoft.sqe.tests.lang.infr001.infr00101md.infr00101md.ClassGen_1<T>,T>,T
  found: ClassGen_1_1::new,javasoft.sqe.tests.lang.infr001.infr00101md.Class_1_1
  reason: cannot infer type-variable(s) T
    (argument mismatch; cannot infer functional interface descriptor for javasoft.sqe.tests.lang.infr001.infr00101md.infr00101md.Iface<java.lang.Object,T>)
Number of errors: 1
com.sun.jck.lib.execonce.Failure: Compilation failed
        at com.sun.jck.lib.execonce.Factory$1.evaluateStatus(Factory.java:27)
        at com.sun.jck.lib.execonce.Factory$1.evaluateStatus(Factory.java:20)
        at com.sun.jck.lib.execonce.Executor.run(Executor.java:116)
        at com.sun.jck.lib.BuildCompilerAPICmd.run(BuildCompilerAPICmd.java:75)
        at com.sun.javatest.Script.invokeClass(Script.java:1094)
        at com.sun.javatest.Script.invokeCommand(Script.java:1005)
        at com.sun.jck.lib.IntermediateScript.invokeCommand(IntermediateScript.java:103)
        at com.sun.javatest.Script.compileTogether(Script.java:608)
        at com.sun.javatest.Script.compileTogether(Script.java:650)
        at com.sun.jck.lib.JCKScript.precompileTest(JCKScript.java:1159)
        at com.sun.jck.lib.JCKScript.run(JCKScript.java:120)
        at com.sun.javatest.Script.run(Script.java:231)
        at com.sun.jck.lib.IntermediateScript.run(IntermediateScript.java:232)
        at com.sun.javatest.DefaultTestRunner.runTest(DefaultTestRunner.java:174)
        at com.sun.javatest.DefaultTestRunner.access$100(DefaultTestRunner.java:43)
        at com.sun.javatest.DefaultTestRunner$1.run(DefaultTestRunner.java:66)  
result: Failed. Compilation failed


test result: Error. compilation failed unexpectedly [Compilation failed]
